<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChatSimple</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_message">test</string>
    <string name="edit_message">Enter a Message</string>
    <string name="conn_et_srv_name">Server-Adresse</string>
    <string name="conn_et_usr_name">Benutzername</string>
    <string name="conn_et_srv_pass">Server-Passwort</string>
    <string name="conn_et_proto_sep">Protokoll-Trenner</string>
    <string name="conn_btn_connect">Verbinden</string>
    <string name="conn_dialog_connect">Verbindung wird hergestellt</string>
    <string name="conn_dialog_logging_in">Einloggen</string>
    <string name="conn_toast_conn_failed">Verbindung fehlgeschlagen</string>
    <string name="conn_toast_login_failed">Login fehlgeschlagen</string>
    <string name="conn_toast_conn_ok">Verbindung hergestellt</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="chat_et_message">Deine Nachricht</string>
    <string name="chat_btn_send">Senden</string>
    <string name="action_disconnect">Verbindung trennen</string>
	<string name="action_exit">Beenden</string>

</resources>